[tool.poetry]
name = "starter-kit"
version = "0.1.0"
description = ""
authors = ["vosps <56444100+vosps@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.20.2"
xarray = "^0.17.0"
matplotlib = "^3.4.1"
seaborn = "^0.11.1"
Cartopy = "^0.18.0"
pandas = "^1.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
